added register page. Disabled login guards

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <span class="user-account" [ngClass]="{active: isActivatedAccountMenu}"><i class="fas fa fa-user user_icon"></i></span>
       </div>
       <i class="fas fa fa-star star_icon"></i>
-      <a routerLink="/shoppingcart/shoppingcart">
+      <a routerLink="/shoppingcart">
         <i class="fas fa fa-shopping-cart cart_icon"></i>
       </a>
     </div>
