--- a/src/app/feature-models/auth/components/register/register.component.scss
+++ b/src/app/feature-models/auth/components/register/register.component.scss
@@ -1,3 +1,135 @@
+$error-input-color: red;
+
+$input-placeholder-color: #999;
+
+$valid-input-icon-color: green;
+
+$invalid-input-icon-color: red;
+
+@mixin input-placeholder-color($color) {
+  -webkit-input-placeholder-color: $color;
+  -moz-placeholder-color: $color;
+  -ms-input-placeholde: $color;
+}
+
+.container{
+    padding: 20px;
+}
+
+.header_title{
+    text-align: center;
+    margin-top: 30px;
+}
+
+.form-group > .form-control,
+.form-group .input-group > .form-control{
+    padding: 0px 10px;
+}
+
+.form-group{
+    margin-bottom: 10px;
+}
+
+.btn-create-account{
+    width: 100%;
+    transition: all 0.3s;
+    cursor: pointer;
+    background-color: lightblue;
+    color: black;
+    font-weight: 300;
+    border: none;
+    padding: 4px;
+    justify-self: center;
+    border-radius: 20px;
+}
+
+.btn-create-account:hover:enabled{
+    transform: scale(1.03);
+    background-color: rgba(111, 201, 111, 0.836);
+}
+
+.btn-close-modal{
+    text-align: center;
+    border-radius: 20px;
+    background-color: lightblue;
+    color: black;
+    border: none;
+}
+.btn-close-modal:hover{
+    text-align: center;
+    border-radius: 20px;
+    background-color: darkblue;
+    color: white;
+}
+
+.span-login{
+    text-align: center;
+}
+
+.span-login-link{
+    font-weight: bold;
+    color: darkblue;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.span-login-link:hover{
+    color: lightblue;
+}
+
+.span-terms-service-link{
+    font-weight: bold;
+    color: darkblue;
+    text-decoration: none;
+    cursor: pointer;
+}
+.span-terms-service-link:hover{
+    color: lightblue;
+}
+
+.validators{
+    margin-left: 20px;
+    color:$error-input-color;
+    transition: all 0.5s;
+}
+
+.input-invalid{
+    color: $error-input-color;
+    font-weight: 400;
+    margin-top: -30px;
+    margin: 0;
+    padding: 0;
+}
+
 .input-error{
-    
+    background-color: #ffdbdb;
+    border: 1px solid $error-input-color;
+}
+
+.span-error-red{
+    color: $invalid-input-icon-color;
+}
+
+.span-error-green{
+    color: $valid-input-icon-color;
+}
+
+.input-group-text{
+    background-color: transparent;
+    border: none;
+    float: right;
+    margin-right: 5px;
+    margin-top: -34px;
+}
+
+.spinner-wrapper{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    background-color: rgba(161,161,161, 0.5);
 }
