--- a/src/app/feature-models/auth/components/register/register.component.scss
+++ b/src/app/feature-models/auth/components/register/register.component.scss
@@ -133,3 +133,14 @@ $invalid-input-icon-color: red;
     left: 0;
     background-color: rgba(161,161,161, 0.5);
 }
+
+.checkbox{
+    margin-right: 5px;
+    padding-top: 2px;
+}
+
+.btn.btn-light{
+    background-color: white;
+    border: none;
+    font-weight: bold;
+}
