--- a/src/app/feature-models/auth/components/login/login.component.html
+++ b/src/app/feature-models/auth/components/login/login.component.html
@@ -1,1 +1,53 @@
-<p>login works!</p>
+<div class="main-container">
+  <div class="container-form">
+    <form class="container-login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="form-title">
+        <h3>Welcome Back! Please login into your account.</h3>
+      </div>
+      <div class="group-form group-form-email">
+        <label for="email">Email:</label>
+        <div class="form-group">
+          <input formControlName="email" name="title" id="title" type="text" class="form-control" placeholder="Email" />
+          <div class="invalid" *ngIf="
+                    this.loginForm.controls.email.touched &&
+                    this.loginForm.controls.email.value === ''
+                    ">
+            Required!
+          </div>
+          <div class="invalid" *ngIf="
+                this.loginForm.controls.email.touched &&
+                this.loginForm.controls.email.invalid
+                ">
+            Please enter a valid E-mail!
+          </div>
+        </div>
+      </div>
+      <div class="group-form group-form-password">
+        <label for="password">Password:</label>
+        <div class="form-group">
+          <input formControlName="password" name="password" id="password" type="password" class="form-control"
+            placeholder="Password" />
+          <div class="invalid" *ngIf="
+                this.loginForm.controls.password.touched &&
+                this.loginForm.controls.password.value === ''">
+            Required!
+
+          </div>
+          <p class="invalid" *ngIf="error">{{error}}</p>
+        </div>
+      </div>
+      <div class="buttons-container">
+        <div class="login forgot-password">
+          <button type="submit" class="btn button button-login" [disabled]="loginForm.invalid">Login</button>
+        </div>
+        <div class="registration">
+          <button class="button button-registration" routerLink="/auth/register">Register</button>
+        </div>
+      </div>
+      <p class="forgot-password-text">Forgot Password?</p>
+    </form>
+  </div>
+  <div class="main-image">
+      <img src="../../../../../assets/8297787cropped1.jpeg" alt="Login Image">
+  </div>
+</div>
