--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -2,7 +2,7 @@
     background-color: #2b5aa6;
     width:100%;
     height: 141px;
-    position: relative;
+    position: absolute;
     bottom: 0;
 }
 
