--- a/src/app/feature-models/shopping-cart/components/wishlist-popover/wishlist-popover.component.html
+++ b/src/app/feature-models/shopping-cart/components/wishlist-popover/wishlist-popover.component.html
@@ -1,1 +1,19 @@
-<p>wishlist-popover works!</p>
+<div class="products-link" (click)="changeRoute(book.productId)">
+    <div class="products-container">
+        <div class="products-img">
+            <img height="100px" width="75px" [src]="book.imageUrl" alt="">
+        </div>
+        <div class="product-details">
+            <div class="product-author"></div>
+            <div class="product-title"></div>
+            <div class="product-price"></div>
+            <div class="product-addToCart">
+                <button class="btn btn-primary" (click)="addToCart($event)">Add to Cart</button>
+            </div>
+        </div>
+
+        <div class="product-delete" (click)="emitBookDelete()">
+            <b>X</b>
+        </div>
+    </div>
+</div>
