finished shopping cart, wishlist functionality

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -91,7 +91,7 @@
           </div>
           <div class="total">
             <div class="total-title">Subtotal:</div>
-            <div class="total-price">{{cartBooks.subtotalPrice | currency: 'RON'}}</div>
+            <div class="total-price">{{cartBooks.subtotalPriceProducts | currency: 'RON'}}</div>
           </div>
           <br/>
           <button class="btn btn-primary btn-view-cart">
