--- a/src/app/feature-models/shopping-cart/shopping-cart/shopping-cart.component.html
+++ b/src/app/feature-models/shopping-cart/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,17 @@
-<p>shopping-cart works!test</p>
+<div class="spinner-wrapper" *ngIf="isLoadingData$ | async">
+    <app-book-loader></app-book-loader>
+</div>
+
+<h1 class="title">My Cart</h1>
+
+<div class="cart">
+    <div class="cart-book" *ngFor="let book of transformFromObjectToArray(cartBook.books)">
+        <app-cart-item [book]="book" (deleteBook)="deleteBook($event)"></app-cart-item>
+    </div>
+    <div class="cart-summary">
+        <p><strong>Subtotal: </strong> {{cartBook.subtotalPriceProducts | currency: 'RON'}}</p>
+        <p class="cart-summary-ptag"><strong>Delivery: </strong></p>
+        <p><strong>Total: </strong> {{cartBook.subtotalPriceProducts | currency: 'RON'}}</p>
+        <button class="btn btn-info cart-summary-checkout">Continue to checkout</button> 
+    </div>
+</div>
