--- a/src/app/feature-models/shopping-cart/components/book-detail-cart-popover/book-detail-cart-popover.component.scss
+++ b/src/app/feature-models/shopping-cart/components/book-detail-cart-popover/book-detail-cart-popover.component.scss
@@ -8,58 +8,61 @@
   box-sizing: border-box;
 }
 
-.products__container {
+.products-container {
   display: grid;
   grid-auto-columns: 75px auto 40px;
   grid-gap: 10px;
   max-height: 240px;
   overflow-y: auto;
+  margin-bottom: 10px;
+  padding: 2px;
+  border: 1px solid gray;
 }
 
-.products__url {
+.products-url {
   text-decoration: none;
   color: black;
 }
 
-.products__url:hover {
+.products-url:hover {
   text-decoration: underline;
 }
 
-.products__container::-webkit-scrollbar {
+.products-container::-webkit-scrollbar {
   width: 6px;
 }
 
-.products__container::-webkit-scrollbar-track {
+.products-container::-webkit-scrollbar-track {
   background: lightblue;
 }
 
-.products__container::-webkit-scrollbar-thumb {
+.products-container::-webkit-scrollbar-thumb {
   background: lightblue;
 }
 
-.products__container::-webkit-scrollbar-thumb:hover {
+.products-container::-webkit-scrollbar-thumb:hover {
   background: lightblue;
 }
 
-.products__img {
+.products-img {
   height: 112px;
   width: 75px;
   grid-column: 1/2;
 }
 
-.products__detail {
+.products-detail {
   grid-column: 2/3;
   grid-template-rows: repeat(4, 1fr);
 }
 
-.products__detail__author {
+.products-detail-author {
   grid-row: 1/2;
   font-weight: 600;
   text-align: left;
   font-size: 12px;
 }
 
-.products__detail__title {
+.products-detail-title {
   grid-row: 2/3;
   text-align: left;
   height: 20px;
@@ -82,14 +85,14 @@
   // }
 }
 
-.products__detail__quantity {
+.products-detail-quantity {
   grid-row: 3/4;
   text-align: left;
   height: 20px;
   font-size: 12px;
 }
 
-.products__detail__price {
+.products-detail-price {
   grid-row: 4/5;
   text-align: left;
   height: 20px;
