--- a/src/app/feature-models/auth/components/register/register.component.scss
+++ b/src/app/feature-models/auth/components/register/register.component.scss
@@ -26,9 +26,9 @@ $invalid-input-icon-color: red;
     padding: 0px 10px;
 }
 
-.form-group{
-    margin-bottom: 10px;
-}
+// .form-group{
+//     margin-bottom: 10px;
+// }
 
 .btn-create-account{
     width: 100%;
@@ -96,7 +96,7 @@ $invalid-input-icon-color: red;
 .input-invalid{
     color: $error-input-color;
     font-weight: 400;
-    margin-top: -30px;
+    margin-top: -15px;
     margin: 0;
     padding: 0;
 }
