--- a/src/app/feature-models/auth/components/login/login.component.scss
+++ b/src/app/feature-models/auth/components/login/login.component.scss
@@ -43,7 +43,7 @@
 
 .buttons-container{
     display: grid;
-    width: 50%;
+    width: 60%;
     grid-template-columns: repeat(2, 1fr);
     align-items: start;
     grid-row: 4/5;
@@ -53,6 +53,11 @@
 
 .button-login{
     grid-column: 1/2;
+}
+
+.button-registration,
+.button-login{
+    width: 90%;
 }
 
 .button-login:hover,
@@ -68,10 +73,10 @@
 }
 
 .registration{
-    width: 100%;
+    // width: 100%;
     height: 100%;
     display: grid;
-    margin-left: 85px;
+    // margin-left: 85px;
 }
 
 .invalid{
