--- a/src/app/feature-models/shopping-cart/cart-item/cart-item.component.scss
+++ b/src/app/feature-models/shopping-cart/cart-item/cart-item.component.scss
@@ -3,7 +3,8 @@
 .card {
     display: grid;
     grid-auto-flow: column;
-    width: 80%;
+    width: 100%;
+    justify-content: start;
   
     &-image {
       img {
@@ -76,7 +77,7 @@
   }
   
   .read_more{
-      width: 20%;
+      width: 175px;
       transition: all 0.3s;
       cursor: pointer;
       background-color: rgb(173, 216, 230);
@@ -92,6 +93,10 @@
     background-color: rgba(214, 241, 250, 0.836);
     border: 1px solid rgb(75, 75, 75);
 }
+
+// .card-details{
+//   width: 1270px;
+// }
 
   @media screen and (max-width: 1000px) {
   
